--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<a href="index.html#about"><i class="fa fa-fw fa-quote-left"></i><span>About</span></a>
 						<a href="index.html#service"><i class="fa fa-fw fa-globe"></i><span>Experience</span></a>
 						<a href="index.html#portfolio"><i class="fa fa-fw fa-picture-o"></i><span>Education</span></a>
-						<a href="index.html#blog"><i class="fa fa-fw fa-rss"></i><span>Blog</span></a>
+						<a href="index.html#blog"><i class="fa fa-fw fa-rss"></i><span>Projects</span></a>
 						<a href="index.html#contact"><i class="fa fa-fw fa-envelope-o"></i><span>Contact</span></a>
 					</div>
 				</nav>
@@ -229,7 +229,7 @@
         <!-- Headline -->
         <div class="row">
               <div class="col-md-12">
-                <h1 class="arrow">My <span>little</span> blog</h1>
+                <h1 class="arrow">My <span>Projects</span></h1>
               </div>
             </div><br><br>
       
