--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="../assets/html5shiv/html5shiv.js"></script>
-      <script src="../assets/respond/respond.min.js"></script>
+      <script src="assets/html5shiv/html5shiv.js"></script>
+      <script src="assets/respond/respond.min.js"></script>
       <![endif]-->
   </head>
     <body id="top">
@@ -108,7 +108,7 @@
               <div class="col-md-8 col-md-offset-2 wp1">
                 <h1 class="arrow">A little <span>about</span> me</h1><!-- Headline -->
 				<!-- about / welcome text -->
-                <p>I received my master's degree in Big Data Analytics from San Diego State University, and my master's degree in Economics from Portland State University.<br>I am experienced in data analytics with a strong statistics and machine learning engineering training. I am currently using Python and SQL for ETL tasks, GitHub Action for task automation, Tableau and Grafana for data visualization. I am highly motivated to use these skills to help organization create data-driven solutions to improve business decision-making. I am open for new opportunities in Data Analytics and Machine Learning Engineer.</p>
+                <p>I am experienced in data analytics with a strong statistics and machine learning engineering training. I am currently using Python and SQL for ETL tasks, GitHub Action for task automation, Tableau and Grafana for data visualization. I am highly motivated to use these skills to help organization create data-driven solutions to improve business decision-making. I am open for new opportunities in Data Analytics and Machine Learning Engineer.</p>
               </div>
             </div>
           </div>
@@ -274,7 +274,7 @@
                       <h2>Natural Language Processing</h2><!-- Headline -->
                       <p>Sentiment analysis on California COVID-19 based on tweets</p><!-- Description-->
                         <p><a href="https://github.com/huongphamBDA/sentiment_analysis_COVID19_tweets">Check it out on GitHub</a></p>
-                        <p><a href="https://sites.google.com/sdsu.edu/sentimentanalysis-huongpham/geocode-the-tweets-and-put-them-on-maps?authuser=0">Read the writeup here</a></p>
+                        <p>OR<br><a href="https://sites.google.com/sdsu.edu/sentimentanalysis-huongpham/geocode-the-tweets-and-put-them-on-maps?authuser=0">Read the writeup here</a></p>
                     </div>
                   </li>
                   <li>
