new images for projects section

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <div class="col-md-8 col-md-offset-2 wp1">
                 <h1 class="arrow">A little <span>about</span> me</h1><!-- Headline -->
 				<!-- about / welcome text -->
-                <p>I am experienced in data analytics with a strong statistics and machine learning engineering training. I am currently using Python and SQL for ETL tasks, GitHub Action for task automation, Tableau and Grafana for data visualization. I am highly motivated to use these skills to help organization create data-driven solutions to improve business decision-making. I am open for new opportunities in Data Analytics and Machine Learning Engineer.</p>
+                <p>I have strong statistics background with machine learning engineering training. I am currently using Python and SQL for ETL tasks, GitHub Action for task automation, Tableau and Grafana for data visualization. I have worked on variety of projects that exposed me to different data analytics tools and Python libraries. I am highly motivated to use these skills to help organization create data-driven solutions to improve business decision-making. I am open for new opportunities in Data Analytics and Machine Learning Engineer.</p>
               </div>
             </div>
           </div>
@@ -136,8 +136,12 @@
                       <h3>LPL Financial</h3>
                       <p>(September 2021 - Present)</p><!-- Description -->
                       <p>> Retrieving historical GitHub commits data using GitHub GraphQL API.<br>
-                          Automated daily GitHub commits data using GitHub Actions.<br>
-                          Validating data accuracy and reduced missing data from 24% to less than 1%.</p><!-- Description -->
+                          Validating data accuracy and reduced missing data from 24% to less than 1%.<br><!-- Description -->
+                          Automating daily GitHub commits data using GitHub Actions.</p>
+                      <p>> Creating report based on ServiceNow data.</p>
+                      <p>> Maintaining PowerShell script to retrieve addition features to Active Directory data.</p>
+                      <p>> Extracting deployment data using Octopus REST API in Python.</p>
+                      <p>> Visualizing GitHub commits, employees, deployments, support incidents, and releases data in interactive Grafana dashboard.</p>
                       <p><b>Skills:</b> Python, SQL, GitHub Actions, Grafana</p>
                   </div>
               </div>
@@ -149,9 +153,9 @@
                       <h2>Data & Analytics Internship</h2>
                       <h3>LPL Financial</h3>
                       <p>(Summer 2021)</p>
-                    <p>> Determining and visualize best time to call financial advisors.</p><!-- Description -->
-                    <p>> Documenting a curated dataset by parsing original SQL codes, explaining tables, fields, and datatype.<br>
-                    Using PlantUML to create diagram to visualize the relationship among tables.</p>
+                    <p>> Determined and visualize best time to call financial advisors.</p><!-- Description -->
+                    <p>> Documented a curated dataset by parsing original SQL codes, explaining tables, fields, and datatype.<br>
+                    Used PlantUML to create diagram to visualize the relationship among tables.</p>
                     <p><b>Skills:</b> Python, SQL, Jupiter Notebook, Tableau, <a href="https://plantuml.com">PlantUML</a></p>
                   </div>
                   <div class="clearfix"></div>
@@ -242,7 +246,7 @@
                     <div class="col-md-4 wp4">
                       <div class="overlay-effect effects clearfix">
                         <div class="img">
-                          <img src="img/blog1.jpg" class="grayscale" alt="Blog Item"><!-- Blog Image -->
+                          <img src="img/portfolio/thesis_wordcloud.jpg" class="grayscale" alt="Blog Item"><!-- Blog Image -->
                         </div>
                       </div>
             <br>
@@ -254,7 +258,7 @@
                     <div class="col-md-4 wp4 delay-05s">
                       <div class="overlay-effect effects clearfix">
                         <div class="img">
-                          <img src="img/blog2.jpg" class="grayscale" alt="Blog Item"><!-- Blog Image -->
+                          <img src="img/portfolio/machine_learning_wordcloud.jpg" class="grayscale" alt="Blog Item"><!-- Blog Image -->
                         </div>
                       </div>
             <br>
@@ -267,12 +271,12 @@
                     <div class="col-md-4 wp4 delay-1s">
                       <div class="overlay-effect effects clearfix">
                         <div class="img">
-                          <img src="img/blog3.jpg" class="grayscale" alt="Blog Item"><!-- Blog Image -->
+                          <img src="img/portfolio/nlp_wordcloud.png" class="grayscale" alt="Blog Item"><!-- Blog Image -->
                         </div>
                       </div>
             <br>
                       <h2>Natural Language Processing</h2><!-- Headline -->
-                      <p>Sentiment analysis on California COVID-19 based on tweets</p><!-- Description-->
+                      <p>Sentiment analysis on California COVID-19 tweets</p><!-- Description-->
                         <p><a href="https://github.com/huongphamBDA/sentiment_analysis_COVID19_tweets">Check it out on GitHub</a></p>
                         <p>OR<br><a href="https://sites.google.com/sdsu.edu/sentimentanalysis-huongpham/geocode-the-tweets-and-put-them-on-maps?authuser=0">Read the writeup here</a></p>
                     </div>
@@ -282,7 +286,7 @@
                     <div class="col-md-4 wp4">
                       <div class="overlay-effect effects clearfix">
                         <div class="img">
-                          <img src="img/blog1.jpg" class="grayscale" alt="Blog Item"><!-- Blog Image -->
+                          <img src="img/portfolio/dbs_management_wordcloud.jpg" class="grayscale" alt="Blog Item"><!-- Blog Image -->
                         </div>
                       </div>
             <br>
@@ -294,7 +298,7 @@
                     <div class="col-md-4 wp4 delay-05s">
                       <div class="overlay-effect effects clearfix">
                         <div class="img">
-                          <img src="img/blog2.jpg" class="grayscale" alt="Blog Item"><!-- Blog Image -->
+                          <img src="img/portfolio/data_visual_wordcloud.jpg" class="grayscale" alt="Blog Item"><!-- Blog Image -->
                         </div>
                       </div>
             <br>
@@ -306,7 +310,7 @@
                     <div class="col-md-4 wp4 delay-1s">
                       <div class="overlay-effect effects clearfix">
                         <div class="img">
-                          <img src="img/blog3.jpg" class="grayscale" alt="Blog Item"><!-- Blog Image -->
+                          <img src="img/portfolio/gis_wordcloud.png" class="grayscale" alt="Blog Item"><!-- Blog Image -->
                         </div>
                       </div>
             <br>
