new images for projects section

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 				<!-- Clients / Testimonials -->
 				<div class="col-md-6 nopadding about-text">
 				<h6>Recommendations</h6>
-					<div id="clientSlider">
+					<div id="recommendSlider">
 					   <ul class="slides">
                            <li><p>I am pleased to recommend Huong (Jenny) Pham as a person with a sharp, curios intellect, a prodigious work ethic, an unfailing professional demeanor... The class required students to master both technical SQL programming skills and Leadership thinking... Huong was the only student in 10 years who aced the assignment on the fist try... Huong’s team chose her to lead, and she shepherded the project to a successful conclusion.</p> <a href="https://www.linkedin.com/in/robertobriggs/">- Robert Briggs, Professor Emeritus of Information Systems, SDSU</a></p></li>
 					   </ul>
@@ -364,12 +364,22 @@
         <section>
 		<div class="container-fluid">
 				<div class="row color-bg">
-				    <div class="col-md-6 nopadding subscribe text-center">
-					 <h1><i class="fa fa-paper-plane"></i><span>Subscribe our Newsletter</span></h1><!-- Heading -->
-                     <form action="index.html#">
-                       <input type="text" name="" value="" placeholder="" required><!-- E-Mail -->
-                       <input type="submit" name="" value="Send"><!-- Submit Button -->
-                    </form>   
+				    <div class="col-md-6 nopadding ">
+                        <!--
+					 <h1><i class="fa fa-paper-plane"></i><span>Subscribe our Newsletter</span></h1>
+                      <form action="index.html#">
+                        <input type="text" name="" value="" placeholder="" required>
+                        <input type="submit" name="" value="Send">
+                      </form>
+                        -->
+                        <div class="col-md-6 nopadding about-text">
+                            <h6>Certifications</h6>
+                            <div id="extrasSlider">
+                                <ul class="slides">
+                                    <li><p>Lean Six Sigma Yellow Belt</p></li>
+                                </ul>
+                            </div>
+                        </div>
 					</div>
 					<div class="col-md-6 nopadding features-intro-img">
 						 <div class="about-image" style="background-image:url(img/newsletter.png)"></div><!-- Right Image -->
