updated page remove personal phone number, etc.

--- a/index.html
+++ b/index.html
@@ -138,10 +138,11 @@
                       <p>> Retrieving historical GitHub commits data using GitHub GraphQL API.<br>
                           Validating data accuracy and reduced missing data from 24% to less than 1%.<br><!-- Description -->
                           Automating daily GitHub commits data using GitHub Actions.</p>
-                      <p>> Creating report based on ServiceNow data.</p>
-                      <p>> Maintaining PowerShell script to retrieve addition features to Active Directory data.</p>
+                      <p>> Creating report based on ServiceNow data.</p></p>
+                      <p>> Maintaining PowerShell script to retrieve additional features to Active Directory data.</p>
                       <p>> Extracting deployment data using Octopus REST API in Python.</p>
-                      <p>> Visualizing GitHub commits, employees, deployments, support incidents, and releases data in interactive Grafana dashboard.</p>
+                      <p>> Visualizing GitHub commits, Active Directory information, deployments, support incidents, release data in interactive Grafana dashboard.</p>
+                      <p>> Successfully led a team of five members on LPL Hackathon 2022 “Data Driven” to collect Jira data from scratch and provided a home office solution using Jira and GitHub data.</p>
                       <p><b>Skills:</b> Python, SQL, GitHub Actions, Grafana</p>
                   </div>
               </div>
@@ -153,7 +154,7 @@
                       <h2>Data & Analytics Internship</h2>
                       <h3>LPL Financial</h3>
                       <p>(Summer 2021)</p>
-                    <p>> Determined and visualize best time to call financial advisors.</p><!-- Description -->
+                    <p>> Determined and visualized best time to call financial advisors.</p><!-- Description -->
                     <p>> Documented a curated dataset by parsing original SQL codes, explaining tables, fields, and datatype.<br>
                     Used PlantUML to create diagram to visualize the relationship among tables.</p>
                     <p><b>Skills:</b> Python, SQL, Jupiter Notebook, Tableau, <a href="https://plantuml.com">PlantUML</a></p>
@@ -344,7 +345,8 @@
 				<h6>Recommendations</h6>
 					<div id="recommendSlider">
 					   <ul class="slides">
-                           <li><p>I am pleased to recommend Huong (Jenny) Pham as a person with a sharp, curios intellect, a prodigious work ethic, an unfailing professional demeanor... The class required students to master both technical SQL programming skills and Leadership thinking... Huong was the only student in 10 years who aced the assignment on the fist try... Huong’s team chose her to lead, and she shepherded the project to a successful conclusion.</p> <a href="https://www.linkedin.com/in/robertobriggs/">- Robert Briggs, Professor Emeritus of Information Systems, SDSU</a></p></li>
+                           <li><p>I am pleased to recommend Huong (Jenny) Pham as a person with a sharp, curios intellect, a prodigious work ethic, an unfailing professional demeanor... The class required students to master both technical SQL programming skills and Leadership thinking... Huong was the only student in 10 years who aced the assignment on the fist try... Huong’s team chose her to lead, and she shepherded the project to a successful conclusion.<br>
+                               (LinkedIn recommendation)</p> <a href="https://www.linkedin.com/in/robertobriggs/">- Robert Briggs, Professor Emeritus of Information Systems, SDSU</a></p></li>
 					   </ul>
 					</div>
 				</div>
@@ -373,21 +375,21 @@
               <div class="col-md-4">
                 <div class="dark-box box-hover">
                   <h2><i class="fa fa-linkedin"></i><span>LinkedIn</span></h2>
-                  <p>linkedin.com/jennyhuongpham</p>
+                  <p><a href="https://www.linkedin.com/in/jennyhuongpham/">in/jennyhuongpham</a></p>
                 </div>
               </div>
 			  <!-- Phone Number Box -->
               <div class="col-md-4">
                 <div class="dark-box box-hover">
                   <h2><i class="fa fa-mobile"></i><span>Phone</span></h2>
-                  <p>+1(858)216-5707</p>
+                  <p>Upon Request</p>
                 </div>
               </div>
 			  <!-- E-Mail Box -->
               <div class="col-md-4">
                 <div class="dark-box box-hover">
                   <h2><i class="fa fa-paper-plane"></i><span>Email</span></h2>
-                  <p><a href="index.html#">jennyp.pdx@gmail.com</a></p>
+                  <p><a href="mailto:email@example.com">jennyp.pdx@gmail.com</a></p>
                 </div>
               </div>
             </div>
