use h4 for text in Experience and Projects sections

--- a/index.html
+++ b/index.html
@@ -134,16 +134,16 @@
                   <div class="text-center section-padding">
                       <h2>DevSecOps Data Analytics Engineering</h2><!-- Title -->
                       <h3>LPL Financial</h3>
-                      <p>(September 2021 - Present)</p><!-- Description -->
-                      <p>> Retrieving historical GitHub commits data using GitHub GraphQL API.<br>
-                          Validating data accuracy and reduced missing data from 24% to less than 1%.<br><!-- Description -->
-                          Automating daily GitHub commits data using GitHub Actions.</p>
-                      <p>> Creating report based on ServiceNow data.</p></p>
-                      <p>> Maintaining PowerShell script to retrieve additional features to Active Directory data.</p>
-                      <p>> Extracting deployment data using Octopus REST API in Python.</p>
-                      <p>> Visualizing GitHub commits, Active Directory information, deployments, support incidents, release data in interactive Grafana dashboard.</p>
-                      <p>> Successfully led a team of five members on LPL Hackathon 2022 “Data Driven” to collect Jira data from scratch and provided a home office solution using Jira and GitHub data.</p>
-                      <p><b>Skills:</b> Python, SQL, GitHub Actions, Grafana</p>
+                    <p><h4>(September 2021 - Present)</h4></p><!-- Description -->
+                    <p><h4>> Retrieving historical GitHub commits data using GitHub GraphQL API.<br>
+                        Validating data accuracy and reduced missing data from 24% to less than 1%.<br><!-- Description -->
+                      Automating daily GitHub commits data using GitHub Actions.</h4></p>
+                    <p><h4>> Creating report based on ServiceNow data.</h4></p></p>
+                    <p><h4>> Maintaining PowerShell script to retrieve additional features to Active Directory data.</h4></p>
+                    <p><h4>> Extracting deployment data using Octopus REST API in Python.</h4></p>
+                    <p><h4>> Visualizing GitHub commits, Active Directory information, deployments, support incidents, release data in interactive Grafana dashboard.</h4></p>
+                    <p><h4>> Successfully led a team of five members on LPL Hackathon 2022 “Data Driven” to collect Jira data from scratch and provided a home office solution using Jira and GitHub data.</h4></p>
+                        <p><h4><b>Skills:</b> Python, SQL, GitHub Actions, Grafana</h4></p>
                   </div>
               </div>
             </div>
@@ -154,10 +154,10 @@
                       <h2>Data & Analytics Internship</h2>
                       <h3>LPL Financial</h3>
                       <p>(Summer 2021)</p>
-                    <p>> Determined and visualized best time to call financial advisors.</p><!-- Description -->
-                    <p>> Documented a curated dataset by parsing original SQL codes, explaining tables, fields, and datatype.<br>
-                    Used PlantUML to create diagram to visualize the relationship among tables.</p>
-                    <p><b>Skills:</b> Python, SQL, Jupiter Notebook, Tableau, <a href="https://plantuml.com">PlantUML</a></p>
+                    <p><h4>> Determined and visualized best time to call financial advisors.</h4></p><!-- Description -->
+                    <p><h4>> Documented a curated dataset by parsing original SQL codes, explaining tables, fields, and datatype.<br>
+                    Used PlantUML to create diagram to visualize the relationship among tables.</h4></p>
+                    <p><h4><b>Skills:</b> Python, SQL, Jupiter Notebook, Tableau, <a href="https://plantuml.com">PlantUML</a></h4></p>
                   </div>
                   <div class="clearfix"></div>
               </div>
@@ -252,7 +252,7 @@
                       </div>
             <br>
                       <h2>Master's Thesis</h2><!-- Headline -->
-                      <p>Examining the local-scale relationship between human mobility and COVID-19: A case study of San Diego, CA.</p><!-- Description-->
+                      <p><h4>Examining the local-scale relationship between human mobility and COVID-19: A case study of San Diego, CA.</h4></p><!-- Description-->
                         <p><a href="https://github.com/huongphamBDA/mobility_covid19">Read the paper here</a></p>
                     </div>
           <!-- Blog Entry 2 -->
@@ -264,7 +264,7 @@
                       </div>
             <br>
                       <h2>Machine Learning Engineering</h2><!-- Headline -->
-                      <p>Predicting whether the home team wins</p><!-- Description -->
+                      <p><h4>Predicting whether the home team wins</h4></p><!-- Description -->
                         <p><a href="https://github.com/huongphamBDA/machinelearning">Check it out on GitHub</a></p>
                         <p>OR<br><a href="https://github.com/huongphamBDA/machinelearning/wiki">Read the document</a></p>
                     </div>
@@ -277,7 +277,7 @@
                       </div>
             <br>
                       <h2>Natural Language Processing</h2><!-- Headline -->
-                      <p>Sentiment analysis on California COVID-19 tweets</p><!-- Description-->
+                      <p><h4>Sentiment analysis on California COVID-19 tweets</h4></p><!-- Description-->
                         <p><a href="https://github.com/huongphamBDA/sentiment_analysis_COVID19_tweets">Check it out on GitHub</a></p>
                         <p>OR<br><a href="https://sites.google.com/sdsu.edu/sentimentanalysis-huongpham/geocode-the-tweets-and-put-them-on-maps?authuser=0">Read the writeup here</a></p>
                     </div>
@@ -292,7 +292,7 @@
                       </div>
             <br>
                       <h2>Enterprise Data Management</h2><!-- Headline -->
-                      <p>Database modeling to support a <a href="https://www.jfcsboston.org/Our-Services/People-with-Disabilities/Group-Adult-Foster-Care">Group Adult Foster Care</a> business operation</p><!-- Description -->
+                        <p><h4>Database modeling to support a <a href="https://www.jfcsboston.org/Our-Services/People-with-Disabilities/Group-Adult-Foster-Care">Group Adult Foster Care</a> business operation</h4></p><!-- Description -->
                         <p><a href="https://github.com/huongphamBDA/database_management">Read the design document here</a></p>
                     </div>
           <!-- Blog Entry 5 -->
@@ -304,7 +304,7 @@
                       </div>
             <br>
                       <h2>Data Visualization</h2>
-                      <p>Analyzing death rate due to heart disease in San Diego during 2017, using Tableau</p>
+                      <p><h4>Analyzing death rate due to heart disease in San Diego during 2017, using Tableau</h4></p>
                         <p><a href="https://public.tableau.com/profile/huong.pham7994#!/vizhome/OverallHeartDisease_HuongPham/OverallHeartDisease2017">View the visualization here</a></p>
                     </div>
           <!-- Blog Entry 6 -->
@@ -316,7 +316,7 @@
                       </div>
             <br>
                       <h2>ArcGIS</h2><!-- Headline -->
-                      <p>Analyzing return on investment of United States colleges. Note: currently this analysis is not available as my academic membership has expired. :-(</p><!-- Description -->
+                      <p><h4>Analyzing return on investment of United States colleges. <i>(* Currently this analysis is not available as my academic membership has expired. :-( *)</i></h4></p><!-- Description -->
                         <p><a href="https://insights.arcgis.com/">View the visualization here</a></p>
                     </div>
                   </li>
@@ -346,7 +346,7 @@
 					<div id="recommendSlider">
 					   <ul class="slides">
                            <li><p>I am pleased to recommend Huong (Jenny) Pham as a person with a sharp, curios intellect, a prodigious work ethic, an unfailing professional demeanor... The class required students to master both technical SQL programming skills and Leadership thinking... Huong was the only student in 10 years who aced the assignment on the fist try... Huong’s team chose her to lead, and she shepherded the project to a successful conclusion.<br>
-                               (LinkedIn recommendation)</p> <a href="https://www.linkedin.com/in/robertobriggs/">- Robert Briggs, Professor Emeritus of Information Systems, SDSU</a></p></li>
+                               <i>(A detailed version is available in my LinkedIn profile)</i></p> <a href="https://www.linkedin.com/in/robertobriggs/">- Robert Briggs, Professor Emeritus of Information Systems, SDSU</a></p></li>
 					   </ul>
 					</div>
 				</div>
