--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                   <div class="text-center">
                       <h2>Data & Analytics Internship</h2>
                       <h3>LPL Financial</h3>
-                      <p>(Summer 2021)</p>
+                      <p><h4>(Summer 2021)</h4></p>
                     <p><h4>> Determined and visualized best time to call financial advisors.</h4></p><!-- Description -->
                     <p><h4>> Documented a curated dataset by parsing original SQL codes, explaining tables, fields, and datatype.<br>
                     Used PlantUML to create diagram to visualize the relationship among tables.</h4></p>
