changed the header

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                       <span>H<span style="color:#00FF00">u</span>ong</span><br/>
                     <span>Ph<span style="color:#FFE800">a</span>m</span>
                   </h1><!-- Title -->
-                  <h3 class="animated fadeInUp delay-05s"><span class="rotate">Data Analytics Enthusiast,Data Visualization Fan,ML Aficionado</span></h3><!-- Text Rotator -->
+                  <h3 class="animated fadeInUp delay-05s"><span class="rotate">Data Analytics,Data Visualization,Machine Learning</span></h3><!-- Text Rotator -->
                 </div>
               </div>
 			  <!-- Learn More Button -->
