added unordered list to experience section

--- a/index.html
+++ b/index.html
@@ -134,15 +134,15 @@
                   <div class="text-center section-padding">
                       <h2>DevSecOps Data Analytics Engineering</h2><!-- Title -->
                       <h3>LPL Financial</h3>
-                    <p><h4>(September 2021 - Present)</h4></p><!-- Description -->
-                    <p><h4>> Retrieving historical GitHub commits data using GitHub GraphQL API.<br>
+                    <h4>(September 2021 - Present)</h4><!-- Description -->
+                    <li>Retrieving historical GitHub commits data using GitHub GraphQL API.<br>
                         Validating data accuracy and reduced missing data from 24% to less than 1%.<br><!-- Description -->
-                      Automating daily GitHub commits data using GitHub Actions.</h4></p>
-                    <p><h4>> Creating report based on ServiceNow data.</h4></p></p>
-                    <p><h4>> Maintaining PowerShell script to retrieve additional features to Active Directory data.</h4></p>
-                    <p><h4>> Extracting deployment data using Octopus REST API in Python.</h4></p>
-                    <p><h4>> Visualizing GitHub commits, Active Directory information, deployments, support incidents, release data in interactive Grafana dashboard.</h4></p>
-                    <p><h4>> Successfully led a team of five members on LPL Hackathon 2022 “Data Driven” to collect Jira data from scratch and provided a home office solution using Jira and GitHub data.</h4></p>
+                      Automating daily GitHub commits data using GitHub Actions.</li>
+                    <p><li>Creating report based on ServiceNow data.</li></p>
+                    <p><li>Maintaining PowerShell script to retrieve additional features to Active Directory data.</li></p>
+                    <p><li>Extracting deployment data using Octopus REST API in Python.</li></p>
+                    <p><li>Visualizing GitHub commits, Active Directory information, deployments, support incidents, release data in interactive Grafana dashboard.</li></p>
+                    <p><li>Successfully led a team of five members on LPL Hackathon 2022 “Data Driven” to collect Jira data from scratch and provided a home office solution using Jira and GitHub data.</li></p>
                         <p><h4><b>Skills:</b> Python, SQL, GitHub Actions, Grafana</h4></p>
                   </div>
               </div>
@@ -154,9 +154,9 @@
                       <h2>Data & Analytics Internship</h2>
                       <h3>LPL Financial</h3>
                       <p><h4>(Summer 2021)</h4></p>
-                    <p><h4>> Determined and visualized best time to call financial advisors.</h4></p><!-- Description -->
-                    <p><h4>> Documented a curated dataset by parsing original SQL codes, explaining tables, fields, and datatype.<br>
-                    Used PlantUML to create diagram to visualize the relationship among tables.</h4></p>
+                    <p><li>Determined and visualized best time to call financial advisors.</li></p><!-- Description -->
+                    <p><li>Documented a curated dataset by parsing original SQL codes, explaining tables, fields, and datatype.<br>
+                    Used PlantUML to create diagram to visualize the relationship among tables.</li></p>
                     <p><h4><b>Skills:</b> Python, SQL, Jupiter Notebook, Tableau, <a href="https://plantuml.com">PlantUML</a></h4></p>
                   </div>
                   <div class="clearfix"></div>
