added final thesis pdf

--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
             <br>
                       <h2>Master's Thesis</h2><!-- Headline -->
                       <p><h4>Examining the local-scale relationship between human mobility and COVID-19: A case study of San Diego, CA.</h4></p><!-- Description-->
-                        <p><a href="https://github.com/huongphamBDA/mobility_covid19">Read the paper here</a></p>
+                        <p><a href="https://github.com/huongphamBDA/mobility_covid19">Read the paper</a></p>
+                        <p><a href="https://github.com/huongphamBDA/mobility_covid19/blob/master/thesis_pdf/official_thesis_huong_pham.pdf" download>Official PDF</a> </p>
                     </div>
           <!-- Blog Entry 2 -->
                     <div class="col-md-4 wp4 delay-05s">
@@ -266,7 +267,7 @@
                       <h2>Machine Learning Engineering</h2><!-- Headline -->
                       <p><h4>Predicting whether the home team wins</h4></p><!-- Description -->
                         <p><a href="https://github.com/huongphamBDA/machinelearning">Check it out on GitHub</a></p>
-                        <p>OR<br><a href="https://github.com/huongphamBDA/machinelearning/wiki">Read the document</a></p>
+                        <p><a href="https://github.com/huongphamBDA/machinelearning/wiki">Read the document</a></p>
                     </div>
           <!-- Blog Entry 3 -->
                     <div class="col-md-4 wp4 delay-1s">
@@ -279,7 +280,7 @@
                       <h2>Natural Language Processing</h2><!-- Headline -->
                       <p><h4>Sentiment analysis on California COVID-19 tweets</h4></p><!-- Description-->
                         <p><a href="https://github.com/huongphamBDA/sentiment_analysis_COVID19_tweets">Check it out on GitHub</a></p>
-                        <p>OR<br><a href="https://sites.google.com/sdsu.edu/sentimentanalysis-huongpham/geocode-the-tweets-and-put-them-on-maps?authuser=0">Read the writeup here</a></p>
+                        <p><a href="https://sites.google.com/sdsu.edu/sentimentanalysis-huongpham/geocode-the-tweets-and-put-them-on-maps?authuser=0">Read the writeup</a></p>
                     </div>
                   </li>
                   <li>
@@ -293,7 +294,7 @@
             <br>
                       <h2>Enterprise Data Management</h2><!-- Headline -->
                         <p><h4>Database modeling to support a <a href="https://www.jfcsboston.org/Our-Services/People-with-Disabilities/Group-Adult-Foster-Care">Group Adult Foster Care</a> business operation</h4></p><!-- Description -->
-                        <p><a href="https://github.com/huongphamBDA/database_management">Read the design document here</a></p>
+                        <p><a href="https://github.com/huongphamBDA/database_management">Read the design document</a></p>
                     </div>
           <!-- Blog Entry 5 -->
                     <div class="col-md-4 wp4 delay-05s">
@@ -305,7 +306,7 @@
             <br>
                       <h2>Data Visualization</h2>
                       <p><h4>Analyzing death rate due to heart disease in San Diego during 2017, using Tableau</h4></p>
-                        <p><a href="https://public.tableau.com/profile/huong.pham7994#!/vizhome/OverallHeartDisease_HuongPham/OverallHeartDisease2017">View the visualization here</a></p>
+                        <p><a href="https://public.tableau.com/profile/huong.pham7994#!/vizhome/OverallHeartDisease_HuongPham/OverallHeartDisease2017">View the visualization</a></p>
                     </div>
           <!-- Blog Entry 6 -->
                     <div class="col-md-4 wp4 delay-1s">
@@ -317,7 +318,7 @@
             <br>
                       <h2>ArcGIS</h2><!-- Headline -->
                       <p><h4>Analyzing return on investment of United States colleges. <i>(* Currently this analysis is not available as my academic membership has expired. :-( *)</i></h4></p><!-- Description -->
-                        <p><a href="https://insights.arcgis.com/">View the visualization here</a></p>
+                        <p><a href="https://insights.arcgis.com/">View the visualization</a></p>
                     </div>
                   </li>
                 </ul>
