added process and upload data using Python and SQL

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                     <p><li>Maintaining PowerShell script to retrieve additional features to Active Directory data.</li></p>
                     <p><li>Extracting deployment data using Octopus REST API in Python.</li></p>
                     <p><li>Visualizing GitHub commits, Active Directory information, deployments, support incidents, release data in interactive Grafana dashboard.</li></p>
+                    <p><li>Processing and uploading datasets using Python and SQL.</li></p>
                     <p><li>Successfully led a team of five members on LPL Hackathon 2022 “Data Driven” to collect Jira data from scratch and provided a home office solution using Jira and GitHub data.</li></p>
                         <p><h4><b>Skills:</b> Python, SQL, GitHub Actions, Grafana</h4></p>
                   </div>
@@ -253,8 +254,8 @@
             <br>
                       <h2>Master's Thesis</h2><!-- Headline -->
                       <p><h4>Examining the local-scale relationship between human mobility and COVID-19: A case study of San Diego, CA.</h4></p><!-- Description-->
-                        <p><a href="https://github.com/huongphamBDA/mobility_covid19">Read the paper</a></p>
-                        <p><a href="https://github.com/huongphamBDA/mobility_covid19/blob/master/thesis_pdf/official_thesis_huong_pham.pdf" download>Official PDF</a> </p>
+                        <p><a href="https://github.com/huongphamBDA/mobility_covid19">Check it out on GitHub</a></p>
+                        <p><a href="https://github.com/huongphamBDA/mobility_covid19/blob/master/thesis_pdf/official_thesis_huong_pham.pdf" download>Official Paper in PDF</a> </p>
                     </div>
           <!-- Blog Entry 2 -->
                     <div class="col-md-4 wp4 delay-05s">
