changed the order of the bullets under Experience

--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                     <p><li>Creating report based on ServiceNow data.</li></p>
                     <p><li>Maintaining PowerShell script to retrieve additional features to Active Directory data.</li></p>
                     <p><li>Extracting deployment data using Octopus REST API in Python.</li></p>
-                    <p><li>Visualizing GitHub commits, Active Directory information, deployments, support incidents, release data in interactive Grafana dashboard.</li></p>
                     <p><li>Processing and uploading datasets using Python and SQL.</li></p>
+                    <p><li>Visualizing GitHub commits, Active Directory information, deployments, support incidents, release data in interactive Grafana dashboard.</li></p>
                     <p><li>Successfully led a team of five members on LPL Hackathon 2022 “Data Driven” to collect Jira data from scratch and provided a home office solution using Jira and GitHub data.</li></p>
                         <p><h4><b>Skills:</b> Python, SQL, GitHub Actions, Grafana</h4></p>
                   </div>
@@ -228,7 +228,7 @@
 		
 
     <!-- ==========================
-        BLOG SECTION 
+        Projects SECTION
         =========================== -->
     <section class="text-center section-padding" id="blog">
           <div class="container">
